# context-guided-diffusion

./: Dockerfile  docker_run.sh
small_molecules/: process_data.sh  train_regressor_ours.sh  train_regressor_ps.sh
small_molecules/config/prop_train_fseb/: yaml_factory.ipynb
small_molecules/config/prop_train_ps/: yaml_factory.ipynb
small_molecules/config/prop_train_weight_decay/: yaml_factory.ipynb
small_molecules/data/: preprocess.py
small_molecules/utils/: data_loader_mol.py
swiss_roll/: environment.yml  pyproject.toml  swiss_roll.ipynb
swiss_roll/conf/: conf_factory.ipynb
swiss_roll/src/: opt_guidance.sh
swiss_roll/src/swiss_roll/: __init__.py  datagen.py  diffusion.py  guidance.py  samplers.py  swiss_roll.ipynb  train.py  utils.py
toy-diffusion/: swissRoll.ipynb
